Add ImageViewerPopup.Close Method to toggle popup container

--- a/Zhihu.Universal/Zhihu/View/Answer/AnswerPage.xaml
+++ b/Zhihu.Universal/Zhihu/View/Answer/AnswerPage.xaml
@@ -336,5 +336,6 @@
 <!--                    </AppBarButton.Foreground>-->
                 </AppBarButton>
             </CommandBar.SecondaryCommands>
-        </CommandBar>   </Grid>
+        </CommandBar>   
+    </Grid>
 </Page>
